See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 0.2.13 (unreleased)

** Update of gnulib files.
Further improves portability to MinGW.

** The manual doesn't have any invariant sections.

** The tests are run under valgrind, if it is installed.
Use --disable-valgrind-tests to unconditionally disable this.  It is
disabled by default for cross compiles.

** Various minor fixes.

* Version 0.2.12 (released 2006-03-08)

** Update of gnulib files.
Improves portability to Mingw32.

* Version 0.2.11 (released 2006-02-07)

** Ported to Windows by cross-compiling using Mingw32.
Using Debian's mingw32 compiler, you can build it for Windows by invoking
`./configure --host=i586-mingw32msvc --disable-gssapi'.

** Update of gnulib files.

* Version 0.2.10 (released 2005-10-23)

** Work around bug in GnuTLS that made the command line tool exit after
** failing to write a zero length message to the peer.

** Don't use GnuTLS if gnutls_certificate_verify_peers2 isn't present.

** Update of gnulib files.

* Version 0.2.9 (released 2005-10-07)

** Update of gnulib files.

* Version 0.2.8 (released 2005-09-08)

** The gsasl tool now support STARTTLS for IMAP and SMTP using GnuTLS.

** The --client and --server parameters for the gsasl tool now work properly.

** The --client and --server stdin/stdout modes now use the readline library.

** Fixed build problems in getpass on uClibc and Mingw32 platforms.

** Kinyarwanda translation added.

* Version 0.2.7 (released 2005-08-25)

** Fix build problems when cross-compiling to uClibc and Mingw32 platforms.

** Detecting and using the readline library has been improved.

* Version 0.2.6 (released 2005-08-08)

** The gsasl tool now try to connect to all addresses for a server name.
